@@ -67,8 +67,8 @@
         <maven.compiler.target>11</maven.compiler.target>
         <tycho-version>2.6.0</tycho-version>
 
-        <epsilon-runtime-version>1.4.0.20210919_103207_8f2ef01_develop</epsilon-runtime-version>
-        <epsilon-runtime-eclipse-version>1.4.0.20210919_133947_3330a32_develop</epsilon-runtime-eclipse-version>
+        <epsilon-runtime-version>1.4.0.20220608_125416_42b1cd6e_develop</epsilon-runtime-version>
+        <epsilon-runtime-eclipse-version>1.4.0.20220608_130119_180c71c5_develop</epsilon-runtime-eclipse-version>
 
         <emf-genmodel-generator-version>1.0.2.20220330_082302_0cadb6da_develop</emf-genmodel-generator-version>
         <judo-genmodel-generator-version>1.0.1.20220405_155701_8eaa7eb0_develop</judo-genmodel-generator-version>
@@ -76,7 +76,9 @@
 
         <xtext-version>2.26.0</xtext-version>
         <emf-mwe2-launch-version>2.12.1</emf-mwe2-launch-version>
-        <slf4j-version>1.6.6</slf4j-version>
+        <slf4j-version>1.7.36</slf4j-version>
+        <surefire-version>3.0.0-M5</surefire-version>
+        <logback-test-config>${maven.multiModuleProjectDirectory}/logback-test.xml</logback-test-config>
 
 
         <!-- Pax exam dependencies -->
@@ -401,13 +403,20 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
-                    <version>3.0.0-M5</version>
+                    <version>${surefire-version}</version>
                     <configuration>
                         <argLine>-Dfile.encoding=UTF-8</argLine>
                         <trimStackTrace>false</trimStackTrace>
                         <systemPropertyVariables>
-                            <log4j.configuration>${log4j.configuration}</log4j.configuration>
+                            <logback.configurationFile>${logback-test-config}</logback.configurationFile>
                         </systemPropertyVariables>
+                        <argLine>
+                            -Dfile.encoding=UTF-8
+                            --add-opens java.base/java.lang=ALL-UNNAMED
+                            --add-opens java.base/java.util=ALL-UNNAMED
+                            --add-opens java.base/java.time=ALL-UNNAMED
+                        </argLine>
+                        <trimStackTrace>false</trimStackTrace>
                     </configuration>
                 </plugin>
 
@@ -724,12 +733,16 @@
                 <version>${slf4j-version}</version>
                 <scope>provided</scope>
             </dependency>
-
             <dependency>
                 <groupId>org.slf4j</groupId>
-                <artifactId>slf4j-log4j12</artifactId>
+                <artifactId>jul-to-slf4j</artifactId>
                 <version>${slf4j-version}</version>
-                <scope>test</scope>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>1.2.11</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
